# Eterna

./: .clang-format  .gitignore
.cache/clangd/index/: interrupts.cc.012FFBDED266EAC9.idx  kernel.cc.576F9CA791D0F19D.idx  main.c.0DCF1DED91ED49E9.idx  panic.cc.D3319E3005B02D8C.idx
OVMFbin/: OVMF_VARS_Eterna.fd
boot/: Makefile  main.c
cmake/: config.cmake  toolchain.cmake
gnu-efi/bootloader/: Makefile  main.c
include/: bitmap.hpp  cstr.hpp  debug.hpp  int.hpp  link_definitions.hpp  linked_list.hpp  math.hpp  string.hpp  uart.hpp  va_list.hpp
include/arch/x86_64/: gdt.hpp
include/interrupts/: idt.hpp  interrupts.hpp
include/io/: io.hpp
include/kernel/: boot.hpp  kernel.hpp  kstage1.hpp
include/memory/: common.hpp  efi_memory.hpp  heap.hpp  memory.hpp  paging.hpp  physical_memory_manager.hpp  region.hpp  virtual_memory_manager.hpp
include/panic/: panic.hpp
include/pci/: pci.hpp
include/renderer/: renderer.hpp
kernel/: CMakeLists.txt  bitmap.cc  cstr.cc  debug.cc  kernel.cc  kstage1.cc  toolchain.cmake  uart.cc
kernel/arch/x86_64/: gdt.asm  gdt.cc  prekernel.asm
kernel/interrupts/: idt.cc  interrupts.cc
kernel/io/: io.cc
kernel/memory/: efi_memory.cc  heap.cpp  memory.cc  physical_memory_manager.cc  virtual_memory_manager.cc
kernel/panic/: panic.cc
kernel/renderer/: renderer.cc
scripts/: mkbootdir.sh  mkgpt.sh  mkgpt_fdisk.sh  mkimg.sh  mkiso.sh  run.sh  runiso.sh  startup.nsh  sysroot.sh
